# claude-dynamic-island

./: .gitignore  CONTRIBUTING.md  README.md  index.html  package-lock.json  package.json  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: windows-ci.yml
characters/default-cat/: manifest.json
docs/: release-checklist.md
scripts/: build-release.ps1  build.bat  clean-project.ps1  generate-icon.cjs  generate-icons.py  generate-sprites.cjs  migrate-dev-env.ps1  move-c-backups.ps1  refresh-shell-icons.ps1
src/: main.css  main.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/approval/: gate.rs
src-tauri/src/character/: loader.rs  mod.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/selection/: gate.rs
src-tauri/src/server/: mod.rs  models.rs  router.rs
src/character/: manifest-security.ts  renderer.ts  sprite-loader.ts  state-machine.ts
src/events/: event-bus.ts  event-orchestrator.ts
src/island/: island.ts
src/preview/: demo-controls.ts
src/settings/: settings-panel.ts  settings-store.ts
src/status/: status-format.ts  status-panel.ts
src/utils/: env.ts
tests/: manifest-security.test.mjs  status-format.test.mjs
