[package]
name = "claude-dynamic-island"
version = "1.0.0"
description = "A Windows 11 Dynamic Island companion for Claude Code with approvals, tray controls, and hook diagnostics."
authors = ["zxy"]
edition = "2021"

[lib]
name = "claude_dynamic_island_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
uuid = { version = "1", features = ["v4"] }
window-vibrancy = "0.5"
raw-window-handle = "0.6"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi"] }
